<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D1A22"
    android:backgroundTint="#0D1A22"
    tools:context=".MainActivity">


    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout2"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="209dp"-->
    <!--        android:background="#0D212C"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </LinearLayout>-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="TextView"
        android:textColor="#F3EEEE"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="2dp"
        android:text="TextView"
        android:textColor="#E84949"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="80dp"
        android:text="Past day"
        android:textColor="#8c8c8c"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/tvPortfolioArrow"-->

<!--        android:layout_width="35dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_marginTop="10dp"-->

<!--        android:layout_marginEnd="272dp"-->
<!--        android:layout_marginBottom="152dp"-->
<!--        android:paddingStart="@dimen/generic4dp"-->
<!--        android:paddingEnd="@dimen/generic4dp"-->
<!--        android:textColor="@color/colorGain"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        tools:text="▲" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="211dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="317dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_rounded_all"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/tvTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:text="@string/statistics"
            android:textColor="#F3EBEB"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/generic14dp"
            android:background="@drawable/background_rounded_all"
            android:padding="@dimen/generic14dp">

            <TextView
                android:id="@+id/Change1h"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:text="label"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$170.11" />

            <TextView
                android:id="@+id/Change1hLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="Change (1h)"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Change1h" />

            <TextView
                android:id="@+id/Change24h"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="Change1h"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Change1hLabel"
                tools:text="$172.30" />


            <TextView
                android:id="@+id/change24hLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"

                android:layout_marginTop="@dimen/generic4dp"
                android:text="Change (24h)"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Change24h" />

            <TextView
                android:id="@+id/Change7d"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="change"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change24hLabel"
                tools:text="$169.20" />

            <TextView
                android:id="@+id/change7dLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"

                android:layout_marginTop="@dimen/generic4dp"
                android:text="Change (7d)"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Change7d" />

            <TextView
                android:id="@+id/Change30d"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="change"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change7dLabel"
                tools:text="$169.20" />

            <TextView
                android:id="@+id/Change30dLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"

                android:layout_marginTop="4dp"
                android:text="Change (30d)"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Change30d" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <TextView
                android:id="@+id/tvVolumeQuantity"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#F6F3F3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12M" />

            <TextView
                android:id="@+id/tvVolumeLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic4dp"
                android:text="@string/volume"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvVolumeQuantity" />


            <TextView
                android:id="@+id/tvAvgVolumeAmount"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic16dp"
                android:textColor="#F6F3F3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvVolumeLabel"
                tools:text="27M" />


            <TextView
                android:id="@+id/tvAvgVolumeLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic4dp"
                android:text="@string/average_volume"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeAmount" />


            <TextView
                android:id="@+id/tvAvgMarketCapAmount"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic16dp"
                android:textColor="#F6F3F3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeLabel"
                tools:text="$867.34B" />


            <TextView
                android:id="@+id/tvAvgMarketCapLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic4dp"
                android:text="@string/market_cap"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvAvgMarketCapAmount" />


            <TextView
                android:id="@+id/tvSupplyNumber"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic16dp"
                android:textColor="#F6F3F3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvAvgMarketCapLabel"
                tools:text="18.433" />

            <TextView
                android:id="@+id/tvSupplyLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic4dp"
                android:text="@string/Supply"
                android:textColor="#8c8c8c"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvSupplyNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>